Make sure presets are saved with a suffix

Otherwise we cannot get the loader for the preset.

BUG:419800